# postal_converter_ja

./: .dockerignore  .gitignore  .mise.toml  API_SPEC.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES.md  SPONSORS.md  docker-compose.local.yml  docker-compose.yml  flake.nix
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  v0_9_task.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template_en.md  pull_request_template_ja.md
.github/workflows/: ci.yml  frontend-pages.yml  sqlite-release.yml  terraform-multiplatform.yml
deploy/argocd/: README.md  application-postal-converter-ja.yaml
deploy/helm/postal-converter-ja/: Chart.yaml  README.md  values-dev.yaml  values-prod.yaml  values-stg.yaml  values.external-secrets.example.yaml  values.ingress-networkpolicy.example.yaml  values.yaml
deploy/helm/postal-converter-ja/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  externalsecret.yaml  ingress.yaml  networkpolicy.yaml  secret.yaml  service.yaml
deploy/k8s/base/: README.md  configmap.yaml  deployment.yaml  kustomization.yaml  namespace.yaml  secret.yaml  service.yaml
docs/:  DEVELOPMENT.md  ALERT_POLICY_v0_9_0.md  CI_DESIGN.md  COMMERCIAL_LICENSE.md  CONTRACTOR_ONBOARDING_CHECKLIST.md  CUSTOMER_ONBOARDING_ESTIMATE_TEMPLATE_v0_9_0.md  DASHBOARD_STANDARD_v0_9_0.md  DEPLOY.md  DOCS_INVENTORY_v0_9_1.md  ENGLISH_README.md  EXTERNAL_SECRETS_RUNBOOK.md  HANDOFF_DB_REDIS_SQLITE.md  HANDOFF_v0.8.3.md  HUMAN_TEST_SCENARIO_v0_9_0.md  K8S_ADOPTION_BLUEPRINT.md  K8S_REHEARSAL_EVIDENCE_v0.8.3.md  KUBERNETES_DEPLOYMENT.md  MONTHLY_AUDIT_REPORT_TEMPLATE_v0_9_0.md  NDA_ONBOARDING_CHECKLIST_v0_9_0.md  ONBOARDING_PROFILES.md  ONBOARDING_REHEARSAL_EVIDENCE.md  OPERATIONS_RUNBOOK_v0.9.md  RUNBOOK_CACHE_INCIDENT_v0_9_0.md  RUNBOOK_DB_ROLLBACK_v0_9_0.md  RUNBOOK_UPDATE_FAILURE_v0_9_0.md  SAML_SSO_MINIMAL_DESIGN.md  SETUP_NIX_DOCKER_AUTOMATION.md  SLO_SLI_v0_9_0.md  SQLITE_MONTHLY_OPERATION_CHECKLIST.md  SQLITE_READONLY_POC.md  TASK_SPLIT_DB_REDIS_SQLITE.md  TERRAFORM_OFFLINE_PLAN_EVIDENCE.md  TERRAFORM_ROLLBACK_REHEARSAL_EVIDENCE.md  TROUBLESHOOTING.md  V0_7_TO_V1_EXECUTION_PLAN.md  V0_9_0_ACCEPTANCE.md  V0_9_0_RELEASE_NOTES.md  V0_9_0_RUNBOOK_EXECUTION_PLAN.md  V0_9_0_SIGNED_TAG_DRAFT.md  VERSION_STRATEGY_v0.4_v0.5.md
frontend/: next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
frontend/src/: themes.tsx
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: postalCode.tsx  postalShowcase.tsx  switch.tsx
frontend/src/lib/: postal-sdk.ts
frontend/src/styles/: globalStyle.tsx
infra/terraform/: README.md
infra/terraform/environments/dev/: aws.tfvars  azure.tfvars  gcp.tfvars
infra/terraform/environments/prod/: aws.tfvars
infra/terraform/environments/stg/: aws.tfvars
launcher/: README_EN.md  README_JA.md  go.mod  main.go
sample/frontend/: pnpm-lock.yaml
sample/frontend/src/context/: radixProvider.tsx
scripts/: build_sqlite_from_postgres.sh  gr  onboard.sh  package_sqlite_release.sh  render_pr_body.sh  run_terraform_workflow.sh  setup_github_oidc_vars.sh  setup_gr_alias.sh  setup_nix_docker.sh
storage/: .gitignore
storage/mysql/: init-mysql.sql  my.cnf
storage/postgres/: init-postgres.sql
worker/: .dockerignore  .gitignore  Cargo.toml
worker/api/: .env.example  Cargo.toml  Dockerfile
worker/api/src/: main.rs
worker/common/: Cargo.toml  pref.json
worker/common/src/: lib.rs  models.rs
worker/common/tests/: db_integration.rs
worker/crawler/: .env  .env.example  .env.unencrypted  Cargo.toml  Dockerfile
worker/crawler/src/: constants.rs  lib.rs  main.rs
worker/crawler/src/db/: audit.rs  connection.rs  insert_postal_code_mysql.rs  insert_postal_code_postgres.rs  mod.rs  query_builder.rs
worker/crawler/src/file/: download.rs  mod.rs  unfreeze.rs
worker/crawler/src/file/parse/: csv.rs  json.rs
worker/crawler/src/utils/: mod.rs  thread.rs  tlog.rs
