[package]
name = "api_service"
version = "0.7.0"
edition = "2021"

[dependencies]
axum = "0.8"
common = { path = "../common" }
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.6", features = ["cors"] }
dotenv = "0.15"
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
deadpool-postgres = { version = "0.14", features = ["serde"] }
mysql_async = { version = "0.36.1", default-features = false, features = [
    "default",
] }
utoipa = { version = "5", features = ["axum_extras"] }
redis = { version = "0.32", features = ["tokio-comp", "connection-manager"] }
rusqlite = { version = "0.33", features = ["bundled"] }
unicode-normalization = "0.1"
ipnet = "2"


[[bin]]
name = "api"
path = "src/main.rs"
