
[package]
name = "common"
version = "0.6.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mysql_async = "0.34"
deadpool-postgres = "0.14"
tokio-postgres = "0.7"
dotenv = "0.15"
tokio = { version = "1.40", features = ["full"] }
utoipa = "5"

[dev-dependencies]
serial_test = "3"

[lib]
path = "src/lib.rs"
