
[package]
name = "common"
version = "0.8.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mysql_async = "0.36.1"
deadpool-postgres = "0.14"
tokio-postgres = "0.7"
dotenv = "0.15"
tokio = { version = "1.40", features = ["full"] }
utoipa = "5"

[lib]
path = "src/lib.rs"

[dev-dependencies]
mysql = "26"
