[package]
name = "crawler_service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio-postgres = "0.7.12"
dotenv = "0.15"
futures = "0.3.31"
futures-util = "0.3.31"
reqwest = { version = "0.12.8", features = [
  "json",
  "blocking",
  "default-tls",
  "stream",
] }
tokio = { version = "1.40.0", features = ["full"] }
rayon = "1.5"
csv = "1.1"
csv-async = "1.3.0"
zip = "2.2.0"
serde = { version = "1.0", features = ["derive"] }
common = { path = "../common" }
deadpool-postgres = "0.14.0"
mysql_async = "0.34.2"
num_cpus = "1.13.0"
chrono = "0.4.19"

[[bin]]
name = "crawler"
path = "src/main.rs"
futures = "0.3.31"

[lib]
path = "src/lib.rs"
