[package]
name = "crawler_service"
version = "0.6.0"
edition = "2021"

[dependencies]
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
dotenv = "0.15"
futures = "0.3"
futures-util = "0.3"
reqwest = { version = "0.13", features = [
  "json",
  "blocking",
  "default-tls",
  "stream",
] }
tokio = { version = "1.40", features = ["full"] }
rayon = "1.10"
csv = "1.3"
csv-async = "1.3"
zip = "7.0"
serde = { version = "1.0", features = ["derive"] }
common = { path = "../common" }
deadpool-postgres = { version = "0.14", features = ["serde"] }
mysql_async = { version = "0.34", default-features = false, features = [
  "default",
  "chrono",
] }
num_cpus = "1.16"
chrono = { version = "0.4", features = ["serde"] }
encoding_rs = "0.8.35"
redis = { version = "0.32", features = ["tokio-comp"] }

[[bin]]
name = "crawler"
path = "src/main.rs"

[[bin]]
name = "rollback"
path = "src/bin/rollback.rs"


[lib]
path = "src/lib.rs"
